# the-ledger

./: .env.example  .gitignore  DESIGN.md  DOMAIN_NOTES.md  FINAL_REPORT.md  README.md  interim_report.md  pyproject.toml
load_gen/: run_concurrent.py
scripts/: demo.py  demo_what_if.py  init_db.py  load_seed_events.py  manual_step1.py  manual_step2.py  manual_step3.py  manual_step4.py  manual_step5.py  manual_step6.py  seed_registry.py  test_decision_paths.py
src/: event_store.py  in_memory_store.py  schema.sql  upcasters.py
src/agents/: compliance.py  credit_analysis.py  decision_orchestrator.py  document_processing.py  fraud_detection.py
src/aggregates/: agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: handlers.py
src/domain/aggregates/: agent_session.py  loan_application.py
src/domain/commands/: handlers.py
src/integrity/: audit_chain.py  gas_town.py
src/mcp_server/: __init__.py  resources.py  server.py  tools.py
src/models/: events.py
src/projections/: agent_performance.py  application_summary.py  base.py  compliance_audit.py  daemon.py
src/registry/: client.py
src/regulatory/: __init__.py  package.py
src/upcasting/: registry.py
src/what_if/: __init__.py  projector.py
tests/: conftest.py  test_aggregates.py  test_audit_chain.py  test_compliance_agent.py  test_concurrency.py  test_credit_analysis_agent.py  test_decision_agent.py  test_document_processing_agent.py  test_event_store.py  test_fraud_agent.py  test_gas_town.py  test_incremental.py  test_mcp_lifecycle.py  test_models.py  test_narratives.py  test_projection_stress.py  test_projections.py  test_registry.py  test_regulatory_package.py  test_stress.py  test_upcasting.py  test_what_if.py
